--- a/Register and Login Forms/style.css
+++ b/Register and Login Forms/style.css
@@ -21,13 +21,13 @@ input{
   overflow: hidden;
 }
 
-.forms-container{
+/*.forms-container{
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-}
+} */
 
 form{
   display: flex;
