--- a/Choose Registration Type/chooseregstyle.css
+++ b/Choose Registration Type/chooseregstyle.css
@@ -22,6 +22,28 @@ input{
   overflow: hidden;
 }
 
+.container{
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #FFF;
+  overflow: hidden;
+}
+
+.container:before{
+  content: '';
+  position: absolute;
+  width: 2000px;
+  height: 2000px;
+  border-radius: 50%;
+  background: linear-gradient(-45deg, #f6546a, #a31225);
+  top: -10%;
+  right: 48%;
+  transform: translateY(-50%);
+  z-index: 6;
+  transition: 1.8s ease-in-out;
+}
+
 .forms-container{
   position: absolute;
   width: 100%;
@@ -55,14 +77,14 @@ form{
 }
 
 .title{
-  font-size: 2.2rem;
+  font-size: 3.2rem;
   color: #f6546a;
   margin-bottom: 10px;
 }
 
 .btn{
-  width: 150px;
-  height: 49px;
+  width: 180px;
+  height: 70px;
   border: none;
   outline: none;
   border-radius: 49px;
@@ -70,6 +92,7 @@ form{
   background-color: #f6546a;
   color:#FFF;
   text-transform: uppercase;
+  font-size: medium;
   font-weight: 600;
   margin: 10px 0;
   transition: .5s;
@@ -80,6 +103,65 @@ form{
 }
 
 .btn.transparent{
+  width: 110px;
+  height: 35px;
+  font-size: 0.7rem;
+  margin: 0;
+  background: none;
+  border: 2px solid #fff;
+  font-weight: 600;
+  font-size: 0.8rem;
+  z-index: 100;
+}
+
+.btn.transparent:hover{
+  background-color: #a31225;
+}
+
+.panels-container{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.panel{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  text-align: center;
+  z-index: 7;
+}
+
+.right-panel{
+  pointer-events: all;
+  padding: 3rem 12% 2rem 17%;
+}
+
+.panel .content{
+  color: #fff;
+  transition: .9s .6s ease-in-out;
+}
+
+.panel h3{
+  font-weight: 600;
+  line-height: 1;
+  font-size: 1.5rem;
+}
+
+.panel p{
+  font-size: 0.95rem;
+  padding: 0.7rem 0;
+}
+
+.btn.transparent{
+  width: 110px;
+  height: 35px;
+  font-size: 0.7rem;
   margin: 0;
   background: none;
   border: 2px solid #fff;
