--- a/Registration Form for Patient/patregstyle.css
+++ b/Registration Form for Patient/patregstyle.css
@@ -22,12 +22,38 @@ input{
   overflow: hidden;
 }
 
+.container:before{
+  content: '';
+  position: absolute;
+  width: 2000px;
+  height: 2000px;
+  border-radius: 50%;
+  background: linear-gradient(-45deg, #f6546a, #a31225);
+  top: -10%;
+  right: 48%;
+  transform: translateY(-50%);
+  z-index: 6;
+  transition: 1.8s ease-in-out;
+}
+
 .forms-container{
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
+}
+
+.login-reg{
+  position: absolute;
+  top: 50%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr;
+  z-index: 5;
+  transition: 1s 0.7s ease-in-out;
 }
 
 form{
@@ -98,4 +124,37 @@ form{
 
 .btn:hover{
   background-color: #a31225;
+}
+
+.panels-container{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.panel{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  text-align: center;
+  z-index: 7;
+}
+
+.left-panel{
+  pointer-events: all;
+  padding: 3rem 17% 2rem 12%;
+}
+
+.panel .content{
+  color: #fff;
+  transition: .9s .6s ease-in-out;
+}
+
+.image{
+  width: 100%;
 }
