--- a/Files/homestyle.css
+++ b/Files/homestyle.css
@@ -7,7 +7,7 @@
 }
 
 header{
-  background-color: #f6546a;
+  background-color: #3069ab;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -71,7 +71,7 @@ input{
   top: 30%;
   transform: translate(-50%, -50%);
   font-size: 3.2rem;
-  color: #f6546a;
+  color: #3069ab;
   margin-bottom: 10px;
 }
 
@@ -81,7 +81,7 @@ input{
   top: 38%;
   transform: translate(-50%, -50%);
   font-size: 1.5rem;
-  color: #f6546a;
+  color: #3069ab;
   margin-bottom: 10px;
 }
 
@@ -96,7 +96,7 @@ input{
   outline: none;
   border-radius: 49px;
   cursor: pointer;
-  background-color: #f6546a;
+  background-color: #3069ab;
   color:#FFF;
   text-transform: uppercase;
   font-size: large;
@@ -106,7 +106,7 @@ input{
 }
 
 .btn:hover{
-  background-color: #a31225;
+  background-color: #355d89;
   width: 475px;
   height: 95px;
   font-size: x-large;
