--- a/Files/nearbypharmastyle.css
+++ b/Files/nearbypharmastyle.css
@@ -6,7 +6,7 @@
 }
 
 header{
-  background-color: #f6546a;
+  background-color: #3069ab;
   display: flex;
   justify-content: space-between;
   align-items: center;
