--- a/Files/homestyle.css
+++ b/Files/homestyle.css
@@ -46,6 +46,9 @@ li, a{
 
 body{
   font-family: 'Roboto', sans-serif;
+  justify-content: center;
+  align-items: center;
+  background: #DDD; #3069ab
 }
 
 input{
@@ -120,4 +123,124 @@ input{
   left: 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+}
+
+.slider{
+  height: 100vh;
+  display: inline-flex;
+  border-radius: 0px;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.slides{
+  width: 500%;
+  height: 500px;
+  display: flex;
+}
+
+.slides input{
+  display: none;
+}
+
+.slide{
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img{
+  width: 800px;
+  height: 500px;
+}
+
+.navigation-manual{
+  position: absolute;
+  display: flex;
+  width: 800px;
+  margin-top: 460px;
+  justify-content: center;
+}
+
+.manual-btn{
+  border: 2px solid #FFF;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+  margin-right: 40px;
+}
+
+.manual-btn:hover{
+  background: #3069ab;
+}
+
+#radio1:checked ~ .first{
+  margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+  margin-left: -20%;
+}
+
+#radio3:checked ~ .first{
+  margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+  margin-left: -60%;
+}
+
+#radio5:checked ~ .first{
+  margin-left: -80%;
+}
+
+#radio6:checked ~ .first{
+  margin-left: -100%;
+}
+
+.navigation-auto{
+  position: absolute;
+  display: flex;
+  width: 800px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.navigation-auto div{
+  border: 2px solid #3069ab;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.navigation-auto div:not(:last-child){
+  margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1{
+  background: #3069ab;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2{
+  background: #3069ab;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3{
+  background: #3069ab;
+}
+
+#radio4:checked ~ .navigation-auto .auto-btn4{
+  background: #3069ab;
+}
+
+#radio5:checked ~ .navigation-auto .auto-btn5{
+  background: #3069ab;
+}
+
+#radio6:checked ~ .navigation-auto .auto-btn6{
+  background: #3069ab;
 }
