--- a/Files/homestyle.css
+++ b/Files/homestyle.css
@@ -18,7 +18,7 @@ header{
 li, a{
   font-family: 'Titillium Web', sans-serif;
   font-weight: 600;
-  font-size: 24px;
+  font-size: 18px;
   color:#FFF;
   text-decoration: none;
 }
@@ -48,7 +48,7 @@ body{
   font-family: 'Roboto', sans-serif;
   justify-content: center;
   align-items: center;
-  background: #DDD; #3069ab
+  background: #FFF; 
 }
 
 input{
@@ -127,16 +127,19 @@ input{
 
 .slider{
   height: 100vh;
-  display: inline-flex;
+  display: inline-flexbox;
+  position: relative;
   border-radius: 0px;
   justify-content: center;
   align-items: center;
   overflow: hidden;
 }
 
-.slides{
+.slider .slides{
+  z-index: 1;
+  position: absolute;
   width: 500%;
-  height: 500px;
+  height: 500%;
   display: flex;
 }
 
@@ -150,8 +153,9 @@ input{
 }
 
 .slide img{
+  margin: auto;
   width: 800px;
-  height: 500px;
+  height: auto;
 }
 
 .navigation-manual{
