--- a/chooseregstyle.css
+++ b/chooseregstyle.css
@@ -28,7 +28,7 @@ input{
   width: 2000px;
   height: 2000px;
   border-radius: 50%;
-  background: linear-gradient(-45deg, #f6546a, #a31225);
+  background: linear-gradient(-45deg, #3069ab, #355d89);
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
@@ -70,7 +70,7 @@ form{
 
 .title{
   font-size: 3.2rem;
-  color: #f6546a;
+  color: #3069ab;
   margin-bottom: 10px;
 }
 
@@ -81,7 +81,7 @@ form{
   outline: none;
   border-radius: 49px;
   cursor: pointer;
-  background-color: #f6546a;
+  background-color: #3069ab;
   color:#FFF;
   text-transform: uppercase;
   font-size: medium;
@@ -91,7 +91,7 @@ form{
 }
 
 .btn:hover{
-  background-color: #a31225;
+  background-color: #355d89;
 }
 
 .btn.transparent{
@@ -107,7 +107,7 @@ form{
 }
 
 .btn.transparent:hover{
-  background-color: #a31225;
+  background-color: #355d89;
 }
 
 .panels-container{
