Made Some Changes

--- a/Files/homestyle.css
+++ b/Files/homestyle.css
@@ -33,7 +33,7 @@ li, a{
 
 .nav-links li{
   display: inline-block;
-  padding: 0px 20px;
+  padding: 0px 10px;
 }
 
 .nav-links li a{
@@ -71,9 +71,9 @@ input{
 .title{
   position: absolute;
   left: 50%;
-  top: 30%;
+  top: 25%;
   transform: translate(-50%, -50%);
-  font-size: 3.2rem;
+  font-size: 3rem;
   color: #3069ab;
   margin-bottom: 10px;
 }
@@ -81,11 +81,12 @@ input{
 .h2-title{
   position: absolute;
   left: 50%;
-  top: 38%;
+  top: 42%;
   transform: translate(-50%, -50%);
   font-size: 1.5rem;
   color: #3069ab;
   margin-bottom: 10px;
+  line-height: 130%;
 }
 
 .btn{
@@ -93,7 +94,7 @@ input{
   height: 70px;
   position: absolute;
   left: 50%;
-  top: 48%;
+  top: 55%;
   transform: translate(-50%, -50%);
   border: none;
   outline: none;
